contact issue definitely fixed on ie

--- a/resources/assets/sass/component/iefix.scss
+++ b/resources/assets/sass/component/iefix.scss
@@ -7,11 +7,11 @@
 }
 
 .ie-flex20{
-	flex-basis: 20% !important;
+	flex-basis: 15% !important;
 }
 
 .ie-flex40{
-	flex-basis: 40% !important;
+	flex-basis: 45% !important;
 }
 
 .ie-spacearound{
